feat(api): improve security, stabilize AI processing, and add frontend management endpoints