@@ -1,12 +1,15 @@
 package com.hoaug.movieapi.modules.chatbot.presentation.controller;
 
 import java.io.IOException;
+import java.util.concurrent.ArrayBlockingQueue;
 import java.util.concurrent.Executor;
-import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.TimeUnit;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.MediaType;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -15,7 +18,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
 
-import tools.jackson.databind.ObjectMapper;
 import com.hoaug.movieapi.modules.chatbot.application.ChatService;
 import com.hoaug.movieapi.modules.chatbot.application.ChatUserContext;
 import com.hoaug.movieapi.modules.chatbot.application.ChatUserContextProvider;
@@ -26,9 +28,10 @@ import com.hoaug.movieapi.modules.chatbot.presentation.dto.ChatChunk;
 import com.hoaug.movieapi.modules.chatbot.presentation.dto.ChatRequest;
 
 import jakarta.validation.Valid;
+import tools.jackson.databind.ObjectMapper;
 
 @RestController
-@RequestMapping("${api.prefix:/api/v1}/chat")
+@RequestMapping("${api.prefix:/api/v1}/assistant")
 public class ChatController {
 
   private static final Logger log = LoggerFactory.getLogger(ChatController.class);
@@ -47,41 +50,41 @@ public class ChatController {
     this.ollamaClient = ollamaClient;
     this.properties = properties;
     this.objectMapper = objectMapper;
-    this.streamExecutor = Executors.newCachedThreadPool(runnable -> {
-      Thread thread = new Thread(runnable);
-      thread.setName("chatbot-stream-" + thread.getId());
-      thread.setDaemon(true);
-      return thread;
-    });
+    this.streamExecutor = new ThreadPoolExecutor(2, 16, 30L, TimeUnit.SECONDS,
+        new ArrayBlockingQueue<>(64), runnable -> {
+          Thread thread = new Thread(runnable);
+          thread.setName("chatbot-stream-" + thread.threadId());
+          thread.setDaemon(true);
+          return thread;
+        }, new ThreadPoolExecutor.CallerRunsPolicy());
   }
 
   @GetMapping("/health")
-  public HealthResponse health() {
-    return new HealthResponse(ollamaClient.isHealthy(), properties.getOllamaModel());
+  @PreAuthorize("hasRole('ADMIN')")
+  public HealthResponse health () {
+    return new HealthResponse(ollamaClient.isHealthy());
   }
 
   @PostMapping(value = "/stream", produces = MediaType.TEXT_EVENT_STREAM_VALUE)
-  public SseEmitter stream(@Valid @RequestBody ChatRequest request, Authentication authentication) {
+  public SseEmitter stream (@Valid @RequestBody ChatRequest request,
+      Authentication authentication) {
     long timeoutMs = properties.getOllamaTimeoutSeconds() * 1000L + 10_000L;
     SseEmitter emitter = new SseEmitter(timeoutMs);
     ChatUserContext userContext = userContextProvider.resolve(authentication);
 
-    streamExecutor.execute(() -> {
+    streamExecutor.execute( () -> {
       try {
         chatService.streamReply(request, userContext, token -> {
           try {
-            emitter.send(SseEmitter.event()
-                .name("message")
-                .data(objectMapper.writeValueAsString(ChatChunk.delta(token)),
-                    MediaType.APPLICATION_JSON));
+            emitter.send(SseEmitter.event().name("message").data(
+                objectMapper.writeValueAsString(ChatChunk.delta(token)),
+                MediaType.APPLICATION_JSON));
           } catch (IOException sendEx) {
             throw new ChatbotException("Stream client disconnected", sendEx);
           }
         });
-        emitter.send(SseEmitter.event()
-            .name("message")
-            .data(objectMapper.writeValueAsString(ChatChunk.done()),
-                MediaType.APPLICATION_JSON));
+        emitter.send(SseEmitter.event().name("message")
+            .data(objectMapper.writeValueAsString(ChatChunk.done()), MediaType.APPLICATION_JSON));
         emitter.complete();
       } catch (ChatbotException ex) {
         log.warn("Chat stream interrupted: {}", ex.getMessage());
@@ -97,17 +100,16 @@ public class ChatController {
     return emitter;
   }
 
-  private void sendErrorAndComplete(SseEmitter emitter, String message) {
+  private void sendErrorAndComplete (SseEmitter emitter, String message) {
     try {
-      emitter.send(SseEmitter.event()
-          .name("message")
-          .data(objectMapper.writeValueAsString(ChatChunk.error(message)),
-              MediaType.APPLICATION_JSON));
+      emitter.send(SseEmitter.event().name("message").data(
+          objectMapper.writeValueAsString(ChatChunk.error(message)), MediaType.APPLICATION_JSON));
     } catch (IOException ignored) {
     } finally {
       emitter.complete();
     }
   }
 
-  public record HealthResponse(boolean ollamaReady, String model) {}
+  public record HealthResponse(boolean ollamaReady) {
+  }
 }
